RESOLVED FIXED92888
Assertion failure in inspector/profiler/heap-snapshot-containment-show-all.html on Lion bot
https://bugs.webkit.org/show_bug.cgi?id=92888
Summary Assertion failure in inspector/profiler/heap-snapshot-containment-show-all.ht...
Antti Koivisto
Reported 2012-08-01 10:59:13 PDT
[WebView(WebPrivate) _close] ends up calling [WebView dealloc] which is wrong (gdb) bt #0 0x0000000101ecfe9a in -[WebViewPrivate dealloc] (self=0x7fcb088e8410, _cmd=0x7fff929bcb6b) at /Users/antti/webkit/OpenSource/Source/WebKit/mac/WebView/WebViewData.mm:114 #1 0x0000000101eb08f7 in -[WebView dealloc] (self=0x7fcb05bc5a70, _cmd=0x7fff929bcb6b) at /Users/antti/webkit/OpenSource/Source/WebKit/mac/WebView/WebView.mm:3389 #2 0x0000000101e2ec9a in -[WebInspectorWindowController dealloc] (self=0x7fcb0885cd30, _cmd=0x7fff929bcb6b) at /Users/antti/webkit/OpenSource/Source/WebKit/mac/WebCoreSupport/WebInspectorClient.mm:302 #3 0x00007fff92239301 in -[NSWindowController release] () #4 0x00007fff8fbc3f9a in CFRelease () #5 0x0000000101e30df1 in WTF::RetainPtr<WebInspectorWindowController>::~RetainPtr (this=0x7fcb033b2df0) at RetainPtr.h:76 #6 0x0000000101e306e5 in WTF::RetainPtr<WebInspectorWindowController>::~RetainPtr (this=0x7fcb033b2df0) at RetainPtr.h:76 #7 0x0000000101e30eb8 in WebInspectorFrontendClient::~WebInspectorFrontendClient (this=0x7fcb033b2d90) at WebInspectorClient.h:89 #8 0x0000000101e30995 in WebInspectorFrontendClient::~WebInspectorFrontendClient (this=0x7fcb033b2d90) at WebInspectorClient.h:89 #9 0x0000000101e309b8 in WebInspectorFrontendClient::~WebInspectorFrontendClient (this=0x7fcb033b2d90) at WebInspectorClient.h:89 #10 0x0000000102d696ae in WTF::deleteOwnedPtr<WebCore::InspectorFrontendClient> (ptr=0x7fcb033b2d90) at OwnPtrCommon.h:56 #11 0x0000000102d6c7e8 in WTF::OwnPtr<WebCore::InspectorFrontendClient>::~OwnPtr (this=0x7fcb05b9ad48) at OwnPtr.h:55 #12 0x0000000102d68ee5 in WTF::OwnPtr<WebCore::InspectorFrontendClient>::~OwnPtr (this=0x7fcb05b9ad48) at OwnPtr.h:55 #13 0x0000000102d665b1 in WebCore::InspectorController::~InspectorController (this=0x7fcb05b9acf0) at /Users/antti/webkit/OpenSource/Source/WebCore/inspector/InspectorController.cpp:178 #14 0x0000000102d664a5 in WebCore::InspectorController::~InspectorController (this=0x7fcb05b9acf0) at /Users/antti/webkit/OpenSource/Source/WebCore/inspector/InspectorController.cpp:173 #15 0x00000001034d28fa in WTF::deleteOwnedPtr<WebCore::InspectorController> (ptr=0x7fcb05b9acf0) at OwnPtrCommon.h:56 #16 0x00000001034d28c8 in WTF::OwnPtr<WebCore::InspectorController>::~OwnPtr (this=0x7fcb0415f258) at OwnPtr.h:55 #17 0x00000001034cd395 in WTF::OwnPtr<WebCore::InspectorController>::~OwnPtr (this=0x7fcb0415f258) at OwnPtr.h:55 #18 0x00000001034c89d8 in WebCore::Page::~Page (this=0x7fcb0415f200) at /Users/antti/webkit/OpenSource/Source/WebCore/page/Page.cpp:214 #19 0x00000001034c8715 in WebCore::Page::~Page (this=0x7fcb0415f200) at /Users/antti/webkit/OpenSource/Source/WebCore/page/Page.cpp:187 #20 0x0000000101ea3dfc in -[WebView(WebPrivate) _close] (self=0x7fcb05bc5a70, _cmd=0x7fff92a3fd13) at /Users/antti/webkit/OpenSource/Source/WebKit/mac/WebView/WebView.mm:1122 #21 0x0000000101eb0a2b in -[WebView close] (self=0x7fcb05bc5a70, _cmd=0x7fff929c6d8f) at /Users/antti/webkit/OpenSource/Source/WebKit/mac/WebView/WebView.mm:3408 #22 0x0000000101e2fd7c in -[WebInspectorWindowController destroyInspectorView:] (self=0x7fcb0885cd30, _cmd=0x7fff91c950c0, notifyInspectorController=false) at /Users/antti/webkit/OpenSource/Source/WebKit/mac/WebCoreSupport/WebInspectorClient.mm:514 #23 0x0000000101e2e610 in WebInspectorFrontendClient::disconnectFromBackend (this=0x7fcb033b2d90) at /Users/antti/webkit/OpenSource/Source/WebKit/mac/WebCoreSupport/WebInspectorClient.mm:213 #24 0x0000000101e2dda6 in WebInspectorClient::closeInspectorFrontend (this=0x7fcb02463d90) at /Users/antti/webkit/OpenSource/Source/WebKit/mac/WebCoreSupport/WebInspectorClient.mm:112 #25 0x0000000102d66cf1 in WebCore::InspectorController::close (this=0x7fcb0245d120) at /Users/antti/webkit/OpenSource/Source/WebCore/inspector/InspectorController.cpp:280 #26 0x0000000101e2d23b in -[WebInspector close:] (self=0x7fcb0245c870, _cmd=0x7fff929efe49, sender=0x0) at /Users/antti/webkit/OpenSource/Source/WebKit/mac/WebInspector/WebInspector.mm:169 #27 0x0000000100dad305 in LayoutTestController::closeWebInspector (this=0x7fcb055c0d60) at /Users/antti/webkit/OpenSource/Tools/DumpRenderTree/mac/LayoutTestControllerMac.mm:891 #28 0x0000000100d7cbcd in runTest (testPathOrURL=@0x7fff5ee9b270) at /Users/antti/webkit/OpenSource/Tools/DumpRenderTree/mac/DumpRenderTree.mm:1393 #29 0x0000000100d7b0ea in runTestingServerLoop () at /Users/antti/webkit/OpenSource/Tools/DumpRenderTree/mac/DumpRenderTree.mm:829 #30 0x0000000100d7a97a in dumpRenderTree (argc=2, argv=0x7fff5ee9bc68) at /Users/antti/webkit/OpenSource/Tools/DumpRenderTree/mac/DumpRenderTree.mm:875 #31 0x0000000100d7cfe9 in main (argc=2, argv=0x7fff5ee9bc68) at /Users/antti/webkit/OpenSource/Tools/DumpRenderTree/mac/DumpRenderTree.mm:913
Attachments
patch (1.35 KB, patch)
2012-08-01 12:05 PDT, Antti Koivisto
kling: review+
better patch (1.25 KB, patch)
2012-08-01 13:08 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2012-08-01 12:05:29 PDT
Antti Koivisto
Comment 2 2012-08-01 13:08:38 PDT
Created attachment 155867 [details] better patch
Antti Koivisto
Comment 3 2012-08-01 13:19:09 PDT
Note You need to log in before you can comment on or make changes to this bug.