Assertion failure in inspector/profiler/heap-snapshot-containment-show-all.html on Lion bot https://bugs.webkit.org/show_bug.cgi?id=92888

Reviewed by Andreas Kling.

Protect the WebInspectorWindowController so it doesn't get destroyed during [WebView close] and cause
unsafe [WebView dealloc].

* WebCoreSupport/WebInspectorClient.mm:
(-[WebInspectorWindowController destroyInspectorView:]):



Canonical link: https://commits.webkit.org/110731@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124360 268f45cc-cd09-0410-ab3c-d52691b4dbfc